# lit-with-gtest-example

./: .gitignore  CMakeLists.txt  example.cpp  lit.cfg.py
